CMAKE_MINIMUM_REQUIRED(VERSION 3.19)

SET(PROJECT_NAME imdiff VERSION 1.0)
SET(CMAKE_CXX_STANDARD 20)
PROJECT(${PROJECT_NAME})

FIND_PACKAGE(OpenCV REQUIRED)
LINK_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

FILE(GLOB_RECURSE SRC_FILES src/*cpp src/*.hpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES} src/iostream.hpp src/string.hpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBRARIES})